--- a/index.html
+++ b/index.html
@@ -574,8 +574,8 @@
                             <!-- //유니세프 -->
                             <div class="unicefbox">
                                 <div class="slide_wrap">
-                                    <div class="monitor" data-23000="transform:translateY(10%); ;"
-                                        data-22000="transform:translateY(13%); opacity:1;">
+                                    <div class="monitor" data-23200="transform:translateY(15%); ;"
+                                        data-21000="transform:translateY(0%); opacity:1;">
                                         <img src="images/monitor.png" alt="모니터">
                                         <div class="monitor_box bottom_box"></div>
                                     </div><!-- //monitor -->
@@ -598,9 +598,9 @@
                                     <!--//m_logo -->
                                     <div class="unicef_info">
                                         <span>info</span>
-                                        <p> background-color를 다양하게 주어<br>
-                                            사용하였습니다. <br>
-                                            이미지 배치는 grid를 사용하여 구현하였습니다.
+                                        <p> 기존 사이트와 달리 swiper parallax를 <br>
+                                            사용하여 슬라이드에 생동강을 더하였습니다.
+
                                         </p>
 
                                         <span>type</span>
