--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                 <div class="p_desc">
                     <h2 data-12500=" font-size: 199px;" data-14300=" font-size: 52px;">portfolio</h2>
                     <div class="hand" data-12000="right:8%" data-15000="right:95%">
-                        <img src="img/portfolio/hand.png" alt="손">
+                        <img src="images/draw-4067546_1280.png" alt="손">
                     </div>
                 </div>
                 <div class="panerl">
@@ -706,10 +706,10 @@
                             <div class="swiper mySwiper">
                                 <div class="swiper-wrapper">
                                     <div class="swiper-slide">
-                                        <img src="img/artwork/po1.jpg" alt="">
+                                        <img src="images/물고기사진포토샵.jpg" alt="">
                                     </div>
                                     <div class="swiper-slide">
-                                        <img src="img/artwork/po2.jpg" alt="">
+                                        <img src="images/b.png" alt="">
                                     </div>
                                     <div class="swiper-slide">
                                         <img src="img/artwork/po3.png" alt="">
@@ -808,21 +808,22 @@
                     <div class="c_box">
                         <div class="con_left">
                             <div class="hover">
-                                <span>#</span><span>S</span><span>S</span><span>M</span><span>B</span><span>S</span>
+                                <span>#</span><span>M</span><span>O</span><span>T</span><span>T</span><span>O</span>
                             </div>
                             <div class="ssmbs">
-                                <span data-label="A small success makes a big success.">A small success makes a big
-                                    success. </span>
+                                <span data-label="Let’s do our best in everything we do!!!">Let’s do our best in
+                                    everything we do!!! </span>
                             </div>
                             <p>
-                                작은성공들이 모여 큰 성공을 이룬다는 뜻인 SSMBS 는 제 좌우명입니다.
-                                퍼블리싱을 처음 배울 때 많은 실패도 있었지만, 꾸준히 공부하며 하나하나
-                                문제를 해결해 나갈 수 있게 됐을 때 참 많이 기뻤던 거 같습니다.
-                                이렇게 저는 작은 성공들을 차곡차곡 모아서 전문적인 퍼블리셔가 되고싶습니다. <br>
-                                <br>
+                                내가 하는 모든일에 최선을 다하자는 제 좌우명입니다.
+                                <br>제가 지금 하고있는 일에 열정과 성실함을 가지고 최선을 다할것입니다.
+
+                                비록 제가 아직 기술이 모자르지만 저를 뽑아주신다면
+
                                 꾸준하고 성실하게 일하겠습니다. <br>
-                                저와 함께할 여정이 궁금하시다면 연락주세요! <br>
-                                제 포트폴리오를 봐주셔서 진심으로 감사드립니다.
+                                저는 배가 고픕니다. <br>
+                                저는 발전을 하고 싶습니다. <br>
+                                저의 포트폴리오를 봐주셔서 대단히 감사드립니다.
                             </p>
                             <div class="thanks">
                                 <img src="img/contact/tube.gif" alt="">
@@ -845,22 +846,7 @@
                         </div>
                     </div>
                 </div><!-- //contact_box -->
-                <div class="circle" data-28000="transform:translateX(100%) rotate(360deg);"
-                    data-28300="transform:translateX(0%) rotate(0deg);">
-                    <div class="text_ani">
-                        <img src="img/contact/text_ani.svg" alt="텍스트 애니메이션">
-                    </div>
-                    <div class="circle_bg">
-                        <span>새싹처럼 성장하는<br> 퍼블리셔가 되겠습니다.</span>
-                        <img src="img/contact/s1.png" alt="">
-                        <img src="img/contact/s2.png" alt="">
-                        <img src="img/contact/s3.png" alt="">
-                        <img src="img/contact/s4.png" alt="">
-                        <img src="img/contact/f1.png" alt="">
-                        <img src="img/contact/f2.png" alt="">
-                        <img src="img/contact/f3.png" alt="">
-                    </div>
-                </div><!-- //circle -->
+
                 <div class="to_top">
                     <a href="#" title="탑으로이동">
                         처음으로 돌아가기
