--- a/index.html
+++ b/index.html
@@ -276,9 +276,9 @@
                 </div>
                 <div class="p_desc">
                     <h2 data-12500=" font-size: 199px;" data-14300=" font-size: 52px;">portfolio</h2>
-                    <div class="hand" data-12000="right:8%" data-15000="right:95%">
+                    <!-- <div class="hand" data-12000="right:8%" data-15000="right:95%">
                         <img src="images/draw-4067546_1280.png" alt="손">
-                    </div>
+                    </div> -->
                 </div>
                 <div class="panerl">
                     <div class="panerl_1" data-12000="left:60px" data-15000="left:-1620px">
@@ -838,9 +838,6 @@
                                 <ul>
                                     <li><i class="fas fa-mobile-alt"></i> phone : 010-2516-0475</li>
                                     <li><i class="fas fa-envelope-open-text"></i> E-mail : ljf135798@naver.com</li>
-                                    <li>본 사이트는 개인 포트폴리오 사이트로 제작되어 상업적 목적이 아닙니다.
-                                        사용된 일부 이미지 및 폰트 등은 별도의 출처가 있음을 밝혀 드립니다.</li>
-                                    <li>Copyright ⓒ 2021 yeri. All rights reserved.</li>
                                 </ul>
                             </div>
                         </div>
