--- a/index.html
+++ b/index.html
@@ -815,7 +815,7 @@
                                     everything we do!!! </span>
                             </div>
                             <p>
-                                내가 하는 모든일에 최선을 다하자는 제 좌우명입니다.
+                                내가 하는 모든일에 최선을 다하자는 것이 제 좌우명입니다.
                                 <br>제가 지금 하고있는 일에 열정과 성실함을 가지고 최선을 다할것입니다.
 
                                 비록 제가 아직 기술이 모자르지만 저를 뽑아주신다면
