--- a/index.html
+++ b/index.html
@@ -687,7 +687,7 @@
                     <div class="panerl_3" data-23600="left:172px;" data-26600="left:-1511px">
                         <div class="p_tit p_tit3">
                             <span class="p_num">Portfolio 03</span>
-                            <span class="p_name">포토샵</span>
+                            <span class="p_name">나의작품들</span>
                         </div>
 
                         <div class="web_fo3">
@@ -709,16 +709,16 @@
                                         <img src="images/물고기사진포토샵.jpg" alt="">
                                     </div>
                                     <div class="swiper-slide">
-                                        <img src="images/b.png" alt="">
+                                        <img src="images/art2.jpg" alt="">
                                     </div>
                                     <div class="swiper-slide">
-                                        <img src="img/artwork/po3.png" alt="">
+                                        <img src="images/art3.jpg" alt="">
                                     </div>
                                     <div class="swiper-slide">
-                                        <img src="img/artwork/po4.jpg" alt="">
+                                        <img src="images/art4.jpg" alt="">
                                     </div>
                                     <div class="swiper-slide">
-                                        <img src="img/artwork/po5.png" alt="">
+                                        <img src="images/art5.jpg" alt="">
                                     </div>
                                     <div class="swiper-slide">
                                         <img src="img/artwork/po6.png" alt="">
