--- a/index.html
+++ b/index.html
@@ -721,25 +721,25 @@
                                         <img src="images/art5.jpg" alt="">
                                     </div>
                                     <div class="swiper-slide">
-                                        <img src="img/artwork/po6.png" alt="">
+                                        <img src="images/부경대.jpeg" alt="">
                                     </div>
                                     <div class="swiper-slide">
-                                        <img src="img/artwork/po7.jpg" alt="">
+                                        <img src="images/상상짬뽕.png" alt="">
                                     </div>
                                     <div class="swiper-slide">
-                                        <img src="img/artwork/po8.jpg" alt="">
+                                        <img src="images/LH건설.png" alt="">
                                     </div>
                                     <div class="swiper-slide">
-                                        <img src="img/artwork/po9.png" alt="">
+                                        <img src="images/아웃백.png" alt="">
                                     </div>
                                     <div class="swiper-slide">
-                                        <img src="img/artwork/po10.jpg" alt="">
+                                        <img src="images/팬스타.png" alt="">
                                     </div>
                                     <div class="swiper-slide">
-                                        <img src="img/artwork/po11.jpg" alt="">
+                                        <img src="images/우주의조약돌.png" alt="">
                                     </div>
                                     <div class="swiper-slide">
-                                        <img src="img/artwork/po12.png" alt="">
+                                        <img src="images/유니세프.png" alt="">
                                     </div>
                                     <div class="swiper-slide">
                                         <img src="img/artwork/po13.png" alt="">
